--- a/CSS/educacao.css
+++ b/CSS/educacao.css
@@ -1,4 +1,41 @@
 /*escrever oque vai ser usado na pg de educação*/
-body {
-    display: grid;
+.container {
+    display: flex; 
+    margin: 0 auto;
+    justify-content: space-between; 
+    align-items: center;
+}
+
+main {
+    display: flex;
+    justify-content: space-around;
+}
+
+.flexbox1, .flexbox2 {
+    flex: 1;
+    margin: 100px;
+    padding: 110px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+    background-color: #1abc9c;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
+.noticias {
+    margin: 2%;
+    height: 150%;
+    width: 15%;
+    padding: 2%;
+    background-color: rgb(239, 255, 250);
+    border-radius: 3%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
