--- a/CSS/games.css
+++ b/CSS/games.css
@@ -1,4 +1,99 @@
-/*escrever oque vai ser usado na pg de jogos*/
 body {
     display: grid;
+    grid-template-rows: auto 1fr auto;
+    margin: 0;
+    font-family: "Playwrite México", sans-serif;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px; /* Espaçamento maior entre os elementos */
+    padding: 20px; /* Espaçamento interno */
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    max-width: 1200px; /* Limita a largura máxima */
+    gap: 20px; /* Espaçamento entre as colunas */
+}
+
+.info {
+    flex: 2; /* Faz com que a info ocupe mais espaço */
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.info h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+    text-align: center;
+}
+
+.info p {
+    font-size: 1em;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.info iframe {
+    width: 100%;
+    height: 300px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.relacionados {
+    flex: 1; /* Faz com que o aside ocupe menos espaço */
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-y: auto; /* Adiciona rolagem se necessário */
+    align-items: center;
+    text-align: center;
+}
+
+.relacionados ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+
+.relacionados li {
+    margin-bottom: 20px;
+    font-size: smaller;
+    align-items: center;
+}
+
+.relacionados li a {
+    text-decoration: none;
+    color: #333;
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.relacionados li img,
+.relacionados li iframe {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.relacionados img {
+    min-height: 130px;
+    max-height: 130px;
+    min-width: 370px;
+    max-width: 370px;
 }
