--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,24 @@
-/*escrever oque vai ser usado na pg principal e oque vai ser padrão nas pgs*/
+/* Estilos padrão e para a página principal */
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    font-family: "Playwrite México", sans-serif; /* Define a fonte */
+    font-size: 16px; /* Define o tamanho da fonte */
+    line-height: 1.5; /* Define o espaçamento entre linhas */
+    color: #b0b0b0;
+}
+
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
+    margin: 0;
+    font-family: "Playwrite México", sans-serif;
 }
 
 header {
     background-color: #1abc9c;
-    padding: 20px ;
+    padding: 20px;
     margin-bottom: 4%;
 }
 
@@ -76,7 +88,6 @@ button img:hover {
     text-align: right;
 }
 
-
 .container {
     display: flex; 
     margin: 0 auto;
@@ -94,19 +105,16 @@ main {
 }
 
 .noticias {
-    flex: 1 1 calc(24% - 2%); /* Cada .noticias ocupa cerca de 30% da largura da linha, menos o espaçamento */
+    flex: 1 1 calc(24% - 2%); /* Cada .noticias ocupa cerca de 24% da largura da linha, menos o espaçamento */
     margin: 0 2%;
     margin-bottom: 2%; /* Espaçamento vertical entre os itens */
     padding: 1%;
-    height: auto;
     background-color: rgb(218, 255, 243);
     border-radius: 3%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    
-    justify-content: space-between; /* Ajusta o conteúdo para distribuir o espaço */
+    justify-content: space-between;
     align-items: stretch; /* Faz com que os itens ocupem toda a largura disponível */
     position: relative; /* Mantém o posicionamento relativo para o link se mover corretamente */
 }
@@ -117,8 +125,7 @@ main {
     margin-top: 5%;
     align-items: end; /* Alinha verticalmente o texto */
     justify-content: center; /* Centraliza horizontalmente o texto */
-    text-align: left; 
-    
+    text-align: left;
 }
 
 img {
@@ -159,17 +166,15 @@ img {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Intensifica a sombra ao passar o mouse */
 }
 
+/* Responsividade */
 @media (max-width: 768px) {
-
-
+    .logo {
+        width: 8%; /* Ajusta o tamanho da logo em telas menores */
+    }
 
     .logo img {
         width: 80%; /* Ajusta o tamanho da imagem da logo */
     }
-
-    .logo {
-        width: 8%; /* Ajusta o tamanho da logo em telas menores */
-        }
 
     .links {
         flex-direction: column;
@@ -247,5 +252,14 @@ img {
     }
 }
 
-/*css para o pop up*/
-
+footer {
+    background-color: #1abc9c;
+    padding: 10px;
+    color: rgb(255, 255, 255);
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    margin: 0;
+    position: relative;
+    bottom: 0;
+}
