--- a/CSS/games.css
+++ b/CSS/games.css
@@ -6,8 +6,6 @@ body {
     font-family: "Playwrite México", sans-serif;
 }
 
-
-
 main {
     display: flex;
     flex-direction: column;
@@ -62,6 +60,8 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow-y: auto; /* Adiciona rolagem se necessário */
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 }
@@ -74,8 +74,20 @@ main {
 }
 
 .relacionados li {
+    border-radius: 10%;
     margin-bottom: 20px;
+    padding-top: 10px;
     font-size: smaller;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.5s;
+}
+
+
+.relacionados li:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .relacionados li a {
@@ -87,16 +99,12 @@ main {
 
 .relacionados li img,
 .relacionados li iframe {
-    width: 100%;
+    display: block;
+    width: 70%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.relacionados img {
-    min-height: 130px;
     max-height: 130px;
-    min-width: 370px;
     max-width: 370px;
 }
 
@@ -110,5 +118,74 @@ footer {
     margin: 0;
     position: relative;
     bottom: 0;
+}
+
+@media (max-width: 1024px) {
+    body {
+        font-size: 16px;
+    }
+    .container {
+        flex-direction: column;
+        gap: 15px;
+        padding: 0 15px;
+    }
+    .info {
+        flex: 1;
+        padding: 15px;
+    }
+    .relacionados {
+        padding: 15px;
+    }
+    .relacionados li img,
+    .relacionados li iframe {
+        max-width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+    .container {
+        flex-direction: column;
+        gap: 10px;
+        padding: 0 10px;
+    }
+    .info {
+        flex: 1;
+        padding: 10px;
+    }
+    .relacionados {
+        padding: 10px;
+    }
+    .relacionados li img,
+    .relacionados li iframe {
+        max-width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 12px;
+    }
+    .container {
+        flex-direction: column;
+        gap: 5px;
+        padding: 0 5px;
+    }
+    .info {
+        flex: 1;
+        padding: 5px;
+    }
+    .relacionados {
+        padding: 5px;
+    }
+    .relacionados li {
+        margin-bottom: 10px;
+    }
+    .relacionados li img,
+    .relacionados li iframe {
+        max-width: 100%;
+    }
 }
 
