--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-    font-family: "Playwrite México", sans-serif; /* Define a fonte */
+    font-family: "Roboto" "Playwrite México", sans-serif !important; /* Define a fonte */
     font-size: 16px; /* Define o tamanho da fonte */
     line-height: 1.5; /* Define o espaçamento entre linhas */
-    color: #b0b0b0;
+    color: #4d4d4d;
 }
 
 body {
@@ -31,6 +31,13 @@ header {
     width: 100%; /* Faz com que a imagem ocupe toda a largura do contêiner .logo */
     height: auto; /* Mantém a proporção da imagem */
     border-radius: 50%;
+    transition: all 0.3s;
+
+}
+
+.logo img:hover {
+    width: 120%;
+    height: auto;
 }
 
 /* Button Styles */
@@ -167,23 +174,52 @@ img {
 }
 
 /* Responsividade */
-@media (max-width: 768px) {
+
+@media (max-width: 1024px) {
+    header {
+        padding: 15px;
+    }
     .logo {
-        width: 8%; /* Ajusta o tamanho da logo em telas menores */
+        width: 6%;
     }
-
     .logo img {
-        width: 80%; /* Ajusta o tamanho da imagem da logo */
+        width: 100%;
     }
-
     .links {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
-
     .links li {
         margin-right: 0;
         margin-bottom: 10px;
+    }
+    .gpt {
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+    .logo {
+        width: 8%;
+    }
+    .logo img {
+        width: 100%;
+    }
+    .links {
+        flex-direction: column;
+        align-items: center;
+    }
+    .links li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    .gpt {
+        text-align: center;
+        margin-top: 10px;
     }
 
     .noticias {
@@ -211,21 +247,26 @@ img {
 }
 
 @media (max-width: 480px) {
+    header {
+        padding: 5px;
+    }
     .logo {
-        width: 12%; /* Ajusta ainda mais o tamanho da logo em telas muito pequenas */
+        width: 10%;
     }
-
     .logo img {
-        width: 60%; /* Ajusta o tamanho da imagem da logo */
+        width: 100%;
     }
-
     .links {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
-
     .links li {
+        margin-right: 0;
         margin-bottom: 5px;
+    }
+    .gpt {
+        text-align: center;
+        margin-top: 5px;
     }
 
     .noticias {
